[feature] 组件化第二步[业务之间跳转如何进行跳转]

--- a/app1/src/main/AndroidManifest.xml
+++ b/app1/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
     package="baina.android.com.app1">
 
     <application>
-        <activity android:name=".PluginTest1Activity" />
+        <activity android:name=".PluginTest1Activity">
+            <intent-filter>
+                <action android:name="android.action.plugintest1activity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="app1.host"
+                    android:path="/plugin_uri_plugintest1activity_path"
+                    android:scheme="app1" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
