--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,28 +1,26 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
+
     defaultConfig {
-        applicationId "baina.android.com.component.based"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation project(':core')
-    implementation project(':app1')
-    implementation project(':app2')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
