[feature] 组件化第三步[组件间通讯]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,12 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [moduleName: project.getName()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -29,4 +35,7 @@ dependencies {
     if (isApp2Plugin.toBoolean()) {
         implementation project(':app2')
     }
+
+    implementation 'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
 }
