--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="baina.android.com.component.based">
+    package="baina.android.com.component.based" android:versionName="1.0.0" android:versionCode="001">
 
     <application
         android:name=".App"
